--- a/#t1-p3-l11.md
+++ b/#t1-p3-l11.md
@@ -1,6 +1,6 @@
-# Term 1 - Part 3 - Lesson 11
-# notes
+## Term 1 - Part 3 - Lesson 11
 
+```sql
 SELECT SUM(num) nums, SUM(letter) letters
 FROM (
   SELECT name, CASE
@@ -11,16 +11,17 @@ FROM (
   ELSE 1
   END AS letter
   FROM accounts) t1;
+```
 
-
+```sql
 SELECT
   primary_poc,
   STRPOS(primary_poc, ' ') AS ws_pos,
   LEFT(primary_poc, STRPOS(primary_poc, ' ') - 1) AS first_name,
   RIGHT(primary_poc, LENGTH(primary_poc) - STRPOS(primary_poc, ' ')) AS last_name
 FROM accounts;
-
-
+```
+```sql
 WITH table_1 AS (
   SELECT
     primary_poc,
@@ -32,3 +33,4 @@ WITH table_1 AS (
 )
 SELECT first_name, last_name, CONCAT(first_name, '.', last_name, '@', REPLACE(company, ' ', ''), '.com')
 FROM table_1
+```
