converted to .md

--- a/#t1-p3-l10.md
+++ b/#t1-p3-l10.md
@@ -1,6 +1,6 @@
-# Term 1 - Part 3 - Lesson 10
-# notes
+## Term 1 - Part 3 - Lesson 10
 
+```sql
 SELECT reg_name, MAX(total_amt) total_amt
 FROM(
   SELECT sales_reps.name rep_name, region.name reg_name, SUM(orders.total_amt_usd) total_amt
@@ -15,3 +15,4 @@ FROM(
   ORDER BY 3 DESC
 ) t1
 GROUP BY 1
+```
