--- a/#t1-p3-l9.md
+++ b/#t1-p3-l9.md
@@ -1,9 +1,9 @@
-# Term 1 - Part 3 - Lesson 9
-# notes
+## Term 1 - Part 3 - Lesson 9
 
-# join 2 tables
-# categoriation based on calculations
+join 2 tables
+categorization based on calculations
 
+```sql
 SELECT a.name, SUM(total_amt_USD) total_spent,
 CASE
 WHEN SUM(total_amt_USD) > 200000 THEN 'top'
@@ -14,11 +14,13 @@ JOIN accounts a
 ON o.account_id = a.id
 GROUP BY a.name
 ORDER BY 2 DESC
+```
 
-# join 2 tables
-# categoriation based on calculations
-# with calculations restricted to dates > 31.12.2015
+join 2 tables
+categorization based on calculations
+with calculations restricted to dates > 31.12.2015
 
+```sql
 SELECT a.name, SUM(total_amt_usd) total_spent,
      CASE WHEN SUM(total_amt_usd) > 200000 THEN 'top'
      WHEN  SUM(total_amt_usd) > 100000 THEN 'middle'
@@ -29,3 +31,4 @@ ON o.account_id = a.id
 WHERE occurred_at > '2015-12-31'
 GROUP BY 1
 ORDER BY 2 DESC;
+```
